--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="html,style,js">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>html task</title>
+    <title>first webpage</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
