--- a/index.html
+++ b/index.html
@@ -11,6 +11,37 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <h1>
+            First Web Page
+        </h1>
+        <p>
+            Kindly do exactly what you see here as it would affect you score<br>
+            Whether it is your first webpage in life or not, use the heading above it won't bite..
+        </p>
+    </header>
+    <main>
+        <h2>
+            H2 Heading
+        </h2>
+        <p>
+            As a best practise, your webpage should have one
+            <br>element
+        </p>
+        <h3>
+            This test is too simple to fail.<br>
+            It is simply a test of how much you have been following the course.
+            <br>
+            Thanks..Wait..<br>
+            Ypu will have to upload this project to github.. Yea.  
+        </h3>
+        <h4>
+            <p>
+                Use the file structure that will be shown here below
+            </p>
+        </h4>
+    </main>
+
 <script src="script.js">
 </script>
 </body>
