--- a/index.html
+++ b/index.html
@@ -25,21 +25,23 @@
             H2 Heading
         </h2>
         <p>
-            As a best practise, your webpage should have one
+            As a best practise, your webpage should have one<br>
             <br>element
         </p>
-        <h3>
-            This test is too simple to fail.<br>
+        <h3> h3 Heading </h3>
+        <p>
+             This test is too simple to fail.<br>
             It is simply a test of how much you have been following the course.
-            <br>
-            Thanks..Wait..<br>
-            Ypu will have to upload this project to github.. Yea.  
-        </h3>
-        <h4>
+        </p>
+            Thanks.. Wait..<br>
+            You will have to upload this project to github .. Yea.  
+        </p>
+      
+        <h4>H4 Heading </h4>
             <p>
                 Use the file structure that will be shown here below
             </p>
-        </h4>
+       
     </main>
 
 <script src="script.js">
